adding CAPTAN FE interface pluging for signal generator specialization

--- a/otsdaq-mu2e/FEInterfaces/CMakeLists.txt
+++ b/otsdaq-mu2e/FEInterfaces/CMakeLists.txt
@@ -43,6 +43,15 @@ simple_plugin(CFOFrontEndInterface "interface"
 	DTCInterface
  )
    
+   
+simple_plugin(CAPTANSignalGenerator "interface"
+  DAQHardware
+  FECore
+  WorkLoopManager
+  Configurable
+  ${CETLIB}
+  ${CETLIB_EXCEPT}
+)
 
 install_headers()
 install_source()
