--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -2,8 +2,8 @@ cet_script(
     #quick-start.sh
     #installArtDaqOts.sh
     #StartOTS.sh
-    multi_udp_send_artdaq.py
-    udp_send_artdaq.py
+    #multi_udp_send_artdaq.py
+    #udp_send_artdaq.py
     )
 
 install_fhicl(SUBDIRS fcl)
