--- a/otsdaq-mu2e/InterfaceTest/CMakeLists.txt
+++ b/otsdaq-mu2e/InterfaceTest/CMakeLists.txt
@@ -5,7 +5,7 @@ cet_make_exec(DemoInterfaceTestMain
 		ConfigurationInterface
 		DAQHardware
 		FECore
-		ConfigurationDataFormats
+		TableCore
         	WorkLoopManager
 		NetworkUtilities
 		otsdaq-components_FEInterfaces_FEOtsUDPTemplateInterface_interface
