--- a/otsdaq-mu2e/CMakeLists.txt
+++ b/otsdaq-mu2e/CMakeLists.txt
@@ -1,5 +1,6 @@
 #add_subdirectory(UserTableCore)
 add_subdirectory(FEInterfaces)
+add_subdirectory(ROCCore)
 #add_subdirectory(DataProcessorPlugins)
 #add_subdirectory(DemoRootUtilities)
 #add_subdirectory(InterfaceTest)
