--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-Data/Logs
-Data_02/Logs
-Data/ServiceData/LoginData/UsersData/TooltipData
-Data/ServiceData/ProgressBarData
+Data*/Logs
+Data*/ServiceData/LoginData/UsersData/TooltipData
+Data*/ServiceData/ProgressBarData
 *.bk
