Adding ROC plugin type for ROC that is DTC-hardware emulated

--- a/otsdaq-mu2e/FEInterfaces/CMakeLists.txt
+++ b/otsdaq-mu2e/FEInterfaces/CMakeLists.txt
@@ -25,6 +25,9 @@
 simple_plugin(ROCPolarFireCoreInterface "interface"
   	ROCCore
  )
+ simple_plugin(ROCDTCHardwareEmulated "interface"
+  	ROCCore
+ )
     
 simple_plugin(DTCFrontEndInterface "interface"
   	FECore
