Make CFOFrontEndInterface use CFOLib. Fixes to CFOLib so that this actually works are pending

--- a/otsdaq-mu2e/FEInterfaces/CMakeLists.txt
+++ b/otsdaq-mu2e/FEInterfaces/CMakeLists.txt
@@ -38,7 +38,7 @@ simple_plugin(DTCFrontEndInterface "interface"
  
 simple_plugin(CFOFrontEndInterface "interface"
   	FECore
-	DTCInterface
+	CFOInterface
  )
    
    
