Clangified and changing unsigned type to uint16_t

--- a/otsdaq-mu2e/CMakeLists.txt
+++ b/otsdaq-mu2e/CMakeLists.txt
@@ -1,6 +1,7 @@
 #add_subdirectory(UserTableCore)
 add_subdirectory(FEInterfaces)
 add_subdirectory(ROCCore)
+add_subdirectory(TablePlugins)
 #add_subdirectory(DataProcessorPlugins)
 #add_subdirectory(DemoRootUtilities)
 #add_subdirectory(InterfaceTest)
