--- a/otsdaq-mu2e/CMakeLists.txt
+++ b/otsdaq-mu2e/CMakeLists.txt
@@ -1,7 +1,9 @@
 #add_subdirectory(UserTableCore)
 add_subdirectory(FEInterfaces)
+add_subdirectory(CFOandDTCCore)
 add_subdirectory(ROCCore)
 add_subdirectory(TablePlugins)
+
 #add_subdirectory(DataProcessorPlugins)
 #add_subdirectory(DemoRootUtilities)
 #add_subdirectory(InterfaceTest)
