--- a/otsdaq-mu2e/ROCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/ROCCore/CMakeLists.txt
@@ -13,7 +13,7 @@ cet_make(LIBRARY_NAME ROCCore
 			Macros
 			WorkLoopManager
 			${XDAQ_BASIC_LIB_LIST}
-			$ENV{XERCES_C_LIB}/libxerces-c.so
+			${XDAQ_XERCES-C}	
 )
 
 install_headers()
