--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,9 +1,5 @@
 cet_script(
-    #quick-start.sh
-    #installArtDaqOts.sh
-    #StartOTS.sh
-    #multi_udp_send_artdaq.py
-    #udp_send_artdaq.py
+    reset_mu2e_ots_snapshot.sh
     )
 
 install_fhicl(SUBDIRS fcl)
