--- a/otsdaq-mu2e/TablePlugins/CMakeLists.txt
+++ b/otsdaq-mu2e/TablePlugins/CMakeLists.txt
@@ -7,6 +7,7 @@
 simple_plugin(DTCInterfaceTable "table"
   TableCore
   ConfigurationInterface
+  SlowControlsTableBase
   Macros
   ${CETLIB}
   ${MF_MESSAGELOGGER}
