--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ find_ups_product( otsdaq v1_00_00 )
 find_ups_product( otsdaq_utilities v1_00_00 )
 find_ups_product( otsdaq_components v1_00_00 )
 find_ups_product( pcie_linux_kernel_module v1_11_01 )
+find_ups_product( TRACE v3_03_00 )
 find_ups_xdaq( v11_2_7 )
 find_ups_root( v5_34_00 )
 find_ups_boost( v1_50_0 filesystem
