--- a/otsdaq-mu2e/TemplateDirectory/CMakeLists.txt
+++ b/otsdaq-mu2e/TemplateDirectory/CMakeLists.txt
@@ -1,7 +1,7 @@
 cet_make(LIBRARY_NAME TemplateDirectory
 		 LIBRARIES
 		 ${XDAQ_BASIC_LIB_LIST}
+		 ${XDAQ_XERCES-C}
 		 SOAPUtilities
-         $ENV{XERCES_C_LIB}/libxerces-c.so
 	 MessageFacility
 )
