Fixed do nothing configure transition of the CFO to skip the CFOLib Registers init action. Added some scripts to help follow logs on remote machines

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,6 +1,8 @@
 cet_script(
     create_mu2e_ots_snapshot.sh
     reset_mu2e_ots_snapshot.sh
+    vless_mu2e.sh
+    vtail_mu2e.sh
     )
 
 install_fhicl(SUBDIRS fcl)
