Add missing DataProcessorPlugins directory to CMakeLists.txt

--- a/otsdaq-mu2e/CMakeLists.txt
+++ b/otsdaq-mu2e/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(CFOandDTCCore)
 add_subdirectory(ROCCore)
 add_subdirectory(TablePlugins)
 
-#add_subdirectory(DataProcessorPlugins)
+add_subdirectory(DataProcessorPlugins)
 #add_subdirectory(DemoRootUtilities)
 #add_subdirectory(InterfaceTest)
 #add_subdirectory(ArtModules)
