--- a/otsdaq-mu2e/CMakeLists.txt
+++ b/otsdaq-mu2e/CMakeLists.txt
@@ -4,6 +4,10 @@ add_subdirectory(CFOandDTCCore)
 add_subdirectory(ROCCore)
 add_subdirectory(TablePlugins)
 
+if( $ENV{OTSDAQ_COMPILE_RUNINFO} MATCHES "1" )
+	add_subdirectory(RunInfoPlugins)
+endif()
+
 #add_subdirectory(DataProcessorPlugins)
 #add_subdirectory(DemoRootUtilities)
 #add_subdirectory(InterfaceTest)
