added ArtModules dir to CMake

--- a/otsdaq-mu2e/CMakeLists.txt
+++ b/otsdaq-mu2e/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
 
 #add_subdirectory(DemoRootUtilities)
 #add_subdirectory(InterfaceTest)
-#add_subdirectory(ArtModules)
+add_subdirectory(ArtModules)
 #add_subdirectory(Generators)
 #add_subdirectory(Overlays)
 #add_subdirectory(ControlsInterfacePlugins)
