--- a/otsdaq-mu2e/CFOandDTCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/CFOandDTCCore/CMakeLists.txt
@@ -1,19 +1,7 @@
-include_directories(${MPI_INCLUDE_PATH})
-include_directories(${CMAKE_BINARY_DIR}/artdaq)
-
 
 cet_make(LIBRARY_NAME CFOandDTCCore
 		 LIBRARIES
-		  	FECore		
-		  	DTCInterface
-			Configurable
-			ConfigurationInterface
-			TableCore
-			Macros
-			WorkLoopManager
-			${XDAQ_BASIC_LIB_LIST}
-			${XDAQ_XERCES-C}
-			${MF_MESSAGELOGGER}		
+		 ROCCore
 )
 
 install_headers()
