--- a/otsdaq-mu2e/ROCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/ROCCore/CMakeLists.txt
@@ -1,20 +1,8 @@
-include_directories(${MPI_INCLUDE_PATH})
-include_directories(${CMAKE_BINARY_DIR}/artdaq)
-
 
 cet_make(LIBRARY_NAME ROCCore
 		 LIBRARIES
-		  	FECore		
-		  	DTCInterface
-			Configurable
-			ConfigurationInterface
-			TableCore
-			artdaq-core_Utilities
-			Macros
-			WorkLoopManager
-			${XDAQ_BASIC_LIB_LIST}
-			${XDAQ_XERCES-C}
-			${MF_MESSAGELOGGER}	
+		  	otsdaq::FECore
+			  pcie_linux_kernel_module::DTCInterface
 )
 
 install_headers()
