--- a/otsdaq-mu2e/ArtModules/CMakeLists.txt
+++ b/otsdaq-mu2e/ArtModules/CMakeLists.txt
@@ -6,20 +6,14 @@ art_make( BASENAME_ONLY
   ${ART_PERSISTENCY_PROVENANCE}
   ${CANVAS_PERSISTENCY_PROVENANCE}
  LIB_LIBRARIES 
-NetworkUtilities
- artdaq_ArtModules
-  art_Framework_Core
-  art_Framework_IO_Sources
-  art_Framework_Principal
-  art_Persistency_Provenance
-  MF_MessageLogger
-  ${ROOT_CINTEX}
+ otsdaq::NetworkUtilities
+#  ${ROOT_CINTEX}
   ${ROOT_RIO}
   ${ROOT_CORE}
-  ${ROOT_NET}
-  ${ROOT_REFLEX}
+#  ${ROOT_NET}
+#  ${ROOT_REFLEX}
 	  ${ROOT_HIST}
-  cetlib
+MF_MessageLogger
 )
 
 install_headers()
