--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,9 +62,6 @@ find_ups_product( otsdaq v1_00_00 )
 find_ups_product( otsdaq_components v1_00_00 )
 find_ups_product(pcie_linux_kernel_module v2_03_00) 
 #find_ups_product( TRACE v3_03_00 )
-find_ups_product( artdaq_database v1_03_07 )
-link_directories($ENV{ARTDAQ_DATABASE_LIB})
-find_ups_product( xdaq v16_7_0_1)
 find_ups_root( v5_34_00 )
 #find_ups_boost( v1_50_0 filesystem
 #                        program_options
@@ -72,16 +69,20 @@ find_ups_root( v5_34_00 )
  #)
  
  # XDAQ Extra setup
+find_ups_product( artdaq_database v1_03_07 )
+find_ups_product( xdaq v16_7_0_1)
  include_directories($ENV{XDAQ_INC}/linux)
+link_directories($ENV{XDAQ_LIB})
+link_directories($ENV{ARTDAQ_DATABASE_LIB})
  set(XDAQ_BASIC_LIB_LIST 
-   $ENV{XDAQ_LIB}/libxcept.so
-   $ENV{XDAQ_LIB}/libxoap.so
-   $ENV{XDAQ_LIB}/libxdaq.so
-   $ENV{XDAQ_LIB}/libtoolbox.so
-   $ENV{XDAQ_LIB}/libxerces-c.so
+   xcept
+   xoap
+   xdaq
+   toolbox
+   xerces-c
    cgicc
  )
- set(XDAQ_XERCES-C $ENV{XDAQ_LIB}/libxerces-c.so)
+ set(XDAQ_XERCES-C xerces-c)
 
 string(REGEX MATCHALL "[0-9][0-9]?[0-9]?" ART_VERSION_LIST "$ENV{ART_VERSION}")
 list(GET ART_VERSION_LIST 0 ART_MAJOR_VERSION)
