--- a/otsdaq-mu2e/DataProcessorPlugins/CMakeLists.txt
+++ b/otsdaq-mu2e/DataProcessorPlugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-  simple_plugin(DQMMu2eHistoConsumer "processor"
+  basic_plugin(DQMMu2eHistoConsumer "processor"
     otsdaq-mu2e_ArtModules
     art::Framework_Services_Registry
     artdaq_core::artdaq-core_Utilities
