--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,8 +1,12 @@
-cet_script(
-    create_mu2e_ots_snapshot.sh
-    reset_mu2e_ots_snapshot.sh
-    vless_mu2e.sh
-    vtail_mu2e.sh
-    )
 
+include(CetTest)
+cet_enable_asserts()
+
+cet_script(ALWAYS_COPY create_mu2e_ots_snapshot.sh)
+cet_script(ALWAYS_COPY reset_mu2e_ots_snapshot.sh)
+cet_script(ALWAYS_COPY vless_mu2e.sh)
+cet_script(ALWAYS_COPY vtail_mu2e.sh)
+
+install_headers()
+install_source()
 install_fhicl(SUBDIRS fcl)
