Remove old files, update CMake configuration

--- a/otsdaq-mu2e/ArtModules/CMakeLists.txt
+++ b/otsdaq-mu2e/ArtModules/CMakeLists.txt
@@ -1,19 +1,11 @@
-art_make( BASENAME_ONLY
- LIBRARY_NAME otsdaq-mu2e_ArtModules
- SUBDIRS detail
-  NO_PLUGINS
-  DICT_DICTIONARIES
-  ${ART_PERSISTENCY_PROVENANCE}
-  ${CANVAS_PERSISTENCY_PROVENANCE}
- LIB_LIBRARIES 
- otsdaq::NetworkUtilities
-#  ${ROOT_CINTEX}
-  ${ROOT_RIO}
-  ${ROOT_CORE}
-#  ${ROOT_NET}
-#  ${ROOT_REFLEX}
-	  ${ROOT_HIST}
-MF_MessageLogger
+cet_make_library(  LIBRARY_NAME ArtModules
+SOURCE HistoReceiver.cc HistoSender.cc
+LIBRARIES PUBLIC
+otsdaq::NetworkUtilities
+ROOT::Core
+otsdaq::Macros
+ROOT::RIO
+ROOT::Gui
 )
 
 install_headers()
