--- a/otsdaq-mu2e/CFOandDTCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/CFOandDTCCore/CMakeLists.txt
@@ -1,7 +1,8 @@
 
-cet_make(LIBRARY_NAME CFOandDTCCore
-		 LIBRARIES
-		 ROCCore
+cet_make_library(LIBRARY_NAME CFOandDTCCore
+SOURCE CFOandDTCCoreVInterface.cc
+		 LIBRARIES PUBLIC
+		 otsdaq_mu2e::ROCCore
 )
 
 install_headers()
