--- a/otsdaq-mu2e/ROCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/ROCCore/CMakeLists.txt
@@ -1,6 +1,7 @@
 
-cet_make(LIBRARY_NAME ROCCore
-		 LIBRARIES
+cet_make_library(LIBRARY_NAME ROCCore
+SOURCE ROCCoreVInterface.cc
+		 LIBRARIES PUBLIC
 		  	otsdaq::FECore
 			  pcie_linux_kernel_module::DTCInterface
 )
