Use default name for library to avoid name conflicts in MRB

--- a/otsdaq-mu2e/ArtModules/CMakeLists.txt
+++ b/otsdaq-mu2e/ArtModules/CMakeLists.txt
@@ -1,4 +1,4 @@
-cet_make_library(  LIBRARY_NAME ArtModules
+cet_make_library( 
 SOURCE HistoReceiver.cc HistoSender.cc
 LIBRARIES PUBLIC
 otsdaq::NetworkUtilities
