--- a/otsdaq-mu2e/DataProcessorPlugins/CMakeLists.txt
+++ b/otsdaq-mu2e/DataProcessorPlugins/CMakeLists.txt
@@ -3,7 +3,7 @@
 include(otsdaq::dataProcessor)
 
   cet_build_plugin(DQMMu2eHistoConsumer otsdaq::dataProcessor LIBRARIES REG
-    otsdaq_mu2e::ArtModules 
+    otsdaq_mu2e::otsdaq-mu2e_ArtModules 
     art::Framework_Services_Registry
     art_root_io::TFileService_service
     otsdaq::RootUtilities
