--- a/otsdaq-mu2e/ROCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/ROCCore/CMakeLists.txt
@@ -3,7 +3,7 @@ cet_make_library(LIBRARY_NAME ROCCore
 SOURCE ROCCoreVInterface.cc
 		 LIBRARIES PUBLIC
 		  	otsdaq::FECore
-			  pcie_linux_kernel_module::DTCInterface
+			  mu2e_pcie_utils::DTCInterface
 )
 
 install_headers()
