Updates from Micol's working area

--- a/otsdaq-mu2e/CFOandDTCCore/CMakeLists.txt
+++ b/otsdaq-mu2e/CFOandDTCCore/CMakeLists.txt
@@ -3,6 +3,7 @@ cet_make_library(LIBRARY_NAME CFOandDTCCore
 SOURCE CFOandDTCCoreVInterface.cc
 		 LIBRARIES PUBLIC
 		 otsdaq_mu2e::ROCCore
+		 otsdaq::ARTDAQTableBase
 )
 
 install_headers()
