added virtaul funciotn getStructureStatusAsJSON into DTCInterfaceTable

--- a/otsdaq-mu2e/TablePlugins/CMakeLists.txt
+++ b/otsdaq-mu2e/TablePlugins/CMakeLists.txt
@@ -1,7 +1,9 @@
   
 include(otsdaq::table)
 
-cet_build_plugin(DTCInterfaceTable otsdaq::table LIBRARIES REG otsdaq::SlowControlsTableBase
+cet_build_plugin(DTCInterfaceTable otsdaq::table LIBRARIES REG 
+    otsdaq::SlowControlsTableBase
+    otsdaq::XDAQContextTable
   )
     
 
